<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/low_gray"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/changephone2_new"
        style="@style/WidgetDirver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_username"
        android:hint="@string/changephone_new"
        android:inputType="phone" />

    <LinearLayout
        android:id="@+id/ll_changephone2_authcode"
        style="@style/WidgetDirver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_password"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/changephone2_authcode"
            style="@style/WidgetDirver"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@null"
            android:hint="@string/signup_authcode"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/changephone2_getSMS"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@drawable/shape_button"
            android:text="@string/signup_getphoneauth"
            android:textColor="@color/txt_white"
            android:textSize="12.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/changephone2_next"
        style="@style/WidgetDirver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dip"
        android:background="@drawable/shape_button"
        android:text="@string/btn_true"
        android:textColor="@color/txt_white" />

</LinearLayout>