<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/low_gray" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/findpd_phone"
            style="@style/WidgetDirver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_center_gray"
            android:hint="@string/findpd_phone"
            android:inputType="phone"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/findpd_authcode_layout"
            style="@style/WidgetDirver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findpd_phone"
            android:background="@drawable/shape_center_gray"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/findpd_authcode"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@null"
                android:hint="@string/signup_authcode_findpw"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp"
                android:layout_gravity="center_vertical" />

            <Button
                android:id="@+id/findpd_getSMS"
                android:layout_width="0dip"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:background="@drawable/shape_button"
                android:text="@string/signup_getphoneauth"
                android:textColor="@color/white"
                android:textSize="12.0sp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/findpd_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="请输入注册手机号收到的短信验证码"
            android:textColor="@color/gray"
            android:layout_below="@+id/findpd_authcode_layout"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/findpd_newpwd"
            style="@style/WidgetDirver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findpd_hint"
            android:background="@drawable/shape_center_gray"
            android:hint="@string/findpd_newpwd"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/findpd_newpwd2"
            style="@style/WidgetDirver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findpd_newpwd"
            android:background="@drawable/shape_center_gray"
            android:hint="@string/findpd_newpwd2"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/findpd_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/shape_button"
            android:text="@string/btn_find_pw"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>