<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/low_gray" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/low_gray" >

        <LinearLayout
            android:id="@+id/login_layout"
            style="@style/WidgetDirver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/shape_center_gray"
                android:hint="@string/login_username"
                android:singleLine="true" 
                android:padding="10dip"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_center_gray"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:padding="10dip" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/WidgetDirver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_layout"
            android:background="@drawable/shape_button"
            android:text="@string/title_login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_find"
            style="@style/WidgetDirver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_btn"
            android:text="@string/login_getpassword"
            android:textColor="@color/orange"
            android:textSize="14.0sp" />
    </RelativeLayout>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>